--- a/iq/1/index.html
+++ b/iq/1/index.html
@@ -509,7 +509,9 @@ document.getElementById('checkoutForm').addEventListener('submit', e => {
   msg += '--------------------\n';
   msg += `المجموع الكلي: ${order.reduce((s, o) => s + o.price * o.qty, 0).toLocaleString()} IQD\n`;
   msg += '====================';
-  window.open(`https://api.whatsapp.com/send?phone=9647855321655&text=${encodeURIComponent(msg)}`, '_blank');
+  const wa = `https://wa.me/+9647855321655?text=${encodeURIComponent(msg)}`;
+  window.open(wa,'_blank');
+  //window.open(`https://api.whatsapp.com/send?phone=9647855321655&text=${encodeURIComponent(msg)}`, '_blank');
   order = [];
   renderOrder();
   closeCheckoutModal();
