--- a/iq/1/index.html
+++ b/iq/1/index.html
@@ -9,13 +9,13 @@
 :root {
     --main: #ef5f5f;
     --accent: #9d0000;
-    --bg: #f9f9f9;
-    --text: rgba(255, 255, 255, 0.94);
+    --bg: #3b0b0b;
+    --text: rgb(73 59 59 / 94%);
     --muted: #9d0000;
-    --glass-bg: rgb(239 239 239 / 45%);
+    --glass-bg: rgb(26 26 26 / 45%);
     --card-radius: 14px;
     --shadow: 0 14px 40px rgba(16, 24, 40, 0.06);
-    --glass-border: rgb(245 29 29 / 45%);
+    --glass-border: rgb(157 91 91 / 45%);
     --glass-blur: 10px;
 }
 *{box-sizing:border-box}
