--- a/iq/1/index.html
+++ b/iq/1/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>قائمة الطعام - بنفش بوتيك (سلة في الهيدر)</title>
+<title>تست مطاعم</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
 <style>
 :root {
@@ -158,7 +158,7 @@ textarea{resize:vertical;min-height:80px}
     <div class="toolbar">
       <div class="search"><input id="search" placeholder="ابحث عن طبق أو مكوّن..." /></div>
       <div style="display:flex;gap:8px;align-items:center">
-        <button class="btn btn-primary" id="demoMood">تجربة بنفش</button>
+        <button class="btn btn-primary" id="demoMood">حسن</button>
       </div>
     </div>
     <section class="grid" id="grid"></section>
