--- a/iq/1/index.html
+++ b/iq/1/index.html
@@ -172,14 +172,10 @@ textarea{resize:vertical;min-height:80px}
   </div>
 </div>
 <div class="modal" id="checkoutModal" aria-hidden="true">
-  <div class="sheet" role="dialog" aria-modal="true" aria-labelledby="checkoutTitle">
-    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
-      <h3 id="checkoutTitle">سلة الطلب وبيانات الوصول</h3>
-      <button id="closeCheckout" class="btn-ghost">إغلاق</button>
-    </div>
-    <div style="display:flex;gap:16px;flex-wrap:wrap">
+  <div class="sheet" role="dialog" aria-modal="true" style="max-width:600px;margin:40px auto">
+    <div style="display:flex;gap:12px;flex-wrap:wrap">
       <div style="flex:1;min-width:260px">
-        <div id="checkoutList" style="max-height:320px;overflow:auto;padding-right:6px;border-radius:8px;border:1px solid rgba(15,23,42,0.04);padding:8px;background:linear-gradient(180deg,rgba(255,255,255,0.98),rgba(255,255,255,0.95))">
+        <div id="checkoutList" style="max-height:320px;overflow:auto;padding:8px;border-radius:8px;border:1px solid rgba(15,23,42,0.04);background:linear-gradient(180deg,rgba(255,255,255,0.98),rgba(255,255,255,0.95))">
           <p style="color:var(--muted);font-size:13px">السلة فارغة - أضف أطباقاً من اليمين</p>
         </div>
         <div style="display:flex;justify-content:space-between;align-items:center;margin-top:12px">
@@ -188,30 +184,39 @@ textarea{resize:vertical;min-height:80px}
         </div>
       </div>
       <div style="width:320px;min-width:260px">
-        <h4 style="margin:0 0 8px 0">معلومات المرسل</h4>
         <form id="checkoutForm">
-          <div class="form-row" style="flex-direction:column">
-            <div class="form-group"><label>الاسم الكامل</label><input type="text" id="custName" class="input" required></div>
-            <div class="form-group"><label>رقم الهاتف</label><input type="tel" id="custPhone" class="input" placeholder="مثال: 07718009200 أو 7718009200 أو +9647718009200" required></div>
-            <div class="form-group"><label>العنوان الكامل</label><textarea id="custAddress" class="input" placeholder="مثال: المنصور بغداد" required></textarea></div>
-            <div class="form-group"><label>ملاحظة عامة للطلب (اختياري)</label><textarea id="orderNote" class="input" placeholder="مثال: لا تضع بصل"></textarea></div>
+          <div class="form-row" style="display:flex;gap:12px;margin-bottom:8px">
+            <div style="flex:1;display:flex;flex-direction:column">
+              <label>الاسم الكامل</label>
+              <input type="text" id="custName" class="input" required>
+            </div>
+            <div style="flex:1;display:flex;flex-direction:column">
+              <label>رقم الهاتف</label>
+              <input type="tel" id="custPhone" class="input" placeholder="مثال: 07718009200 أو +9647718009200" required>
+            </div>
           </div>
-          <div class="footer-actions" style="margin-top:10px">
+          <div class="form-group" style="margin-bottom:8px">
+            <label>العنوان الكامل</label>
+            <textarea id="custAddress" class="input" placeholder="مثال: المنصور بغداد" required></textarea>
+          </div>
+          <div class="form-group" style="margin-bottom:8px">
+            <label>ملاحظة عامة للطلب (اختياري)</label>
+            <textarea id="orderNote" class="input" placeholder="مثال: لا تضع بصل"></textarea>
+          </div>
+          <div class="footer-actions" style="margin-top:10px;display:flex;justify-content:flex-end;gap:8px">
             <button type="button" class="btn-ghost" id="cancelCheckout">إلغاء</button>
-            <button type="submit" class="btn btn-primary">send</button>
+            <button type="submit" class="btn btn-primary">إرسال</button>
           </div>
         </form>
       </div>
     </div>
   </div>
 </div>
+
 <div class="modal" id="noteModal" aria-hidden="true">
   <div class="sheet" style="width:520px;max-width:96%">
-    <h3 id="noteTitle">ملاحظة الصنف</h3>
-    <div style="margin-top:8px">
-      <textarea id="noteInput" class="input" placeholder="أضف ملاحظة للصنف"></textarea>
-    </div>
-    <div class="footer-actions">
+    <textarea id="noteInput" class="input" placeholder="أضف ملاحظة للصنف"></textarea>
+    <div class="footer-actions" style="margin-top:8px;display:flex;justify-content:flex-end;gap:8px">
       <button id="cancelNote" class="btn-ghost">إلغاء</button>
       <button id="saveNote" class="btn btn-primary">حفظ</button>
     </div>
