--- a/iq/1/index.html
+++ b/iq/1/index.html
@@ -174,8 +174,8 @@ textarea{resize:vertical;min-height:80px}
 <div class="modal" id="checkoutModal" aria-hidden="true">
   <div class="sheet" role="dialog" aria-modal="true" aria-labelledby="checkoutTitle">
     <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
-      <!--<h3 id="checkoutTitle">سلة الطلب وبيانات الوصول</h3>-->
-      <!--<button id="closeCheckout" class="btn-ghost">إغلاق</button>-->
+      <<h3 id="checkoutTitle">سلة الطلب وبيانات الوصول</h3>
+      <button id="closeCheckout" class="btn-ghost">إغلاق</button>
     </div>
     <div style="display:flex;gap:16px;flex-wrap:wrap">
       <div style="flex:1;min-width:260px">
