--- a/iq/1/index.html
+++ b/iq/1/index.html
@@ -76,6 +76,14 @@ textarea{resize:vertical;min-height:80px}
 .cart-toggle{padding:8px 10px;border-radius:10px;border:1px solid rgba(15,23,42,0.06);cursor:pointer;display:flex;align-items:center;gap:8px;background:transparent}
 .cart-badge{background:#ff4d6d;color:#fff;border-radius:50%;min-width:24px;height:24px;display:inline-flex;align-items:center;justify-content:center;font-weight:800;padding:0 6px;font-size:13px}
 .dark{--bg:#0f1724;--text:#f3f4f6;--muted:#9aa6b2;--glass-bg: rgba(255,255,255,0.03);--glass-border: rgba(255,255,255,0.06)}
+.form-row-1 {
+  display: flex;
+  gap: 10px;
+}
+.form-group-1 {
+  flex: 1;
+}
+
 @media (max-width: 480px) {
   .cart-modal,
   .cart-modal .modal-content {
@@ -179,7 +187,7 @@ textarea{resize:vertical;min-height:80px}
     </div>
     <div style="display:flex;gap:16px;flex-wrap:wrap">
       <div style="flex:1;min-width:260px">
-        <div id="checkoutList" style="max-height:320px;overflow:auto;padding-right:6px;border-radius:8px;border:1px solid rgba(15,23,42,0.04);padding:8px;background:linear-gradient(180deg,rgba(255,255,255,0.98),rgba(255,255,255,0.95))">
+        <div id="checkoutList" style="max-height:199px;overflow:auto;padding-right:6px;border-radius:8px;border:1px solid rgba(15,23,42,0.04);padding:8px;background:linear-gradient(180deg,rgba(255,255,255,0.98),rgba(255,255,255,0.95))">
           <p style="color:var(--muted);font-size:13px">السلة فارغة - أضف أطباقاً من اليمين</p>
         </div>
         <div style="display:flex;justify-content:space-between;align-items:center;margin-top:12px">
@@ -190,8 +198,16 @@ textarea{resize:vertical;min-height:80px}
       <div style="width:320px;min-width:260px">
         <form id="checkoutForm">
           <div class="form-row" style="flex-direction:column">
-            <div class="form-group"><label>الاسم الكامل</label><input type="text" id="custName" class="input" required></div>
-            <div class="form-group"><label>رقم الهاتف</label><input type="tel" id="custPhone" class="input" placeholder="مثال: 07718009200 أو 7718009200 أو +9647718009200" required></div>
+            <div class="form-row-1">
+              <div class="form-group-1">
+                <label>الاسم الكامل</label>
+                <input type="text" id="custName" class="input" required>
+              </div>
+              <div class="form-group-1">
+                <label>رقم الهاتف</label>
+                <input type="tel" id="custPhone" class="input" placeholder="مثال: 07718009200 أو 7718009200 أو +9647718009200" required>
+              </div>
+            </div>
             <div class="form-group"><label>العنوان الكامل</label><textarea id="custAddress" class="input" placeholder="مثال: المنصور بغداد" required></textarea></div>
             <div class="form-group"><label>ملاحظة عامة للطلب (اختياري)</label><textarea id="orderNote" class="input" placeholder="مثال: لا تضع بصل"></textarea></div>
           </div>
