--- a/iq/1/index.html
+++ b/iq/1/index.html
@@ -83,7 +83,13 @@ textarea{resize:vertical;min-height:80px}
 .form-group-1 {
   flex: 1;
 }
-
+.logo-1 {
+  width: 80px;height: 80px;
+  background-image: url('images/logo.png');
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+}
 @media (max-width: 480px) {
   .cart-modal,
   .cart-modal .modal-content {
@@ -140,7 +146,8 @@ textarea{resize:vertical;min-height:80px}
 <div class="app">
   <div class="sidebar" id="desktopSidebar">
     <div class="brand-compact">
-      <div class="logo">ب</div>
+      <div class="logo-1"></div>
+
       <div>
         <h1>ادريس - اختبار</h1>
         <div style="font-size:13px;color:var(--muted)">قائمة مينيو</div>
