--- a/iq/1/index.html
+++ b/iq/1/index.html
@@ -212,7 +212,7 @@ textarea{resize:vertical;min-height:80px}
               </div>
               <div class="form-group-1">
                 <label>رقم الهاتف</label>
-                <input type="tel" id="custPhone" class="input" placeholder="مثال: 07718009200 أو 7718009200 أو +9647718009200" required>
+                <input type="tel" id="custPhone" class="input" placeholder="مثال: 07718009200 " required>
               </div>
             </div>
             <div class="form-group"><label>العنوان الكامل</label><textarea id="custAddress" class="input" placeholder="مثال: المنصور بغداد" required></textarea></div>
