--- a/iq/1/index.html
+++ b/iq/1/index.html
@@ -85,7 +85,7 @@ textarea{resize:vertical;min-height:80px}
 }
 .logo-1 {
   width: 80px;height: 80px;
-  background-image: url('images/logo.png');
+  background-image: url('https://cdn.discordapp.com/attachments/1436276906772271146/1436321597102489711/aboud.rest_14040817_144858815.jpg');
   background-size: cover;
   background-position: center;
   border-radius: 50%;
@@ -129,7 +129,7 @@ textarea{resize:vertical;min-height:80px}
 <div class="bg-glow" aria-hidden></div>
 <div class="header" aria-hidden>
   <div class="brand">
-    <div class="logo">ب</div>
+    <div class="logo-1"></div>
     <div>
       <h1>ادريس - تست</h1>
       <div style="font-size:13px;color:var(--muted)">مينيو طعام</div>
