--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ textarea{resize:vertical;min-height:80px}
 <div class="bg-glow" aria-hidden></div>
 <div class="header" aria-hidden>
   <div class="brand">
-    <div class="logo-1"></div>
+    <div class="logo">تيست</div>
     <div>
       <h1>ادريس - تست</h1>
       <div style="font-size:13px;color:var(--muted)">مينيو طعام</div>
@@ -146,7 +146,7 @@ textarea{resize:vertical;min-height:80px}
 <div class="app">
   <div class="sidebar" id="desktopSidebar">
     <div class="brand-compact">
-      <div class="logo-1"></div>
+      <div class="logo">تيست</div>
 
       <div>
         <h1>ادريس - اختبار</h1>
