--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ textarea{resize:vertical;min-height:80px,max-width: 80%;}
     <div class="toolbar">
       <div class="search"><input id="search" placeholder="ابحث عن طبق أو مكوّن..." /></div>
       <div style="display:flex;gap:8px;align-items:center">
-        <button class="btn btn-primary" id="demoMood">حسن</button>
+        <button class="btn btn-primary" id="demoMood">ادريس</button>
       </div>
     </div>
     <section class="grid" id="grid"></section>
